--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "deno.enablePaths": [
     "./"
   ],
-  "editor.inlayHints.enabled": "off"
+  "deno.enable": true,
+  "editor.inlayHints.enabled": "on"
 }
