--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,13 @@
 {
   "imports": {
-    "hono": "jsr:@hono/hono@^4.6.12"
+    "@/": "./src/",
+    "hono": "jsr:@hono/hono@^4.6.12",
+    "prisma": "jsr:@prisma/client@^6.0.1"
   },
   "tasks": {
-    "start": "deno run --allow-net main.ts"
+    "start": "denon run -A src/main.ts",
+    "prisma-db-pull": "deno run -A npm:prisma@latest db pull",
+    "prisma-generate": "deno run -A npm:prisma@latest generate"
   },
   "compilerOptions": {
     "jsx": "precompile",
