--- a/deno.json
+++ b/deno.json
@@ -4,6 +4,7 @@
     "#prisma/client": "./prisma/client.ts",
     "@prisma/client": "npm:@prisma/client@^6.0.1",
     "@std/path": "jsr:@std/path@^1.0.6",
+    "@std/datetime": "jsr:@std/datetime@^0.225.2",
     "hono": "jsr:@hono/hono@^4.6.12"
   },
   "tasks": {
